--- a/PROJETO/Home.html
+++ b/PROJETO/Home.html
@@ -29,7 +29,10 @@
               <a class="nav-link" href="subPaginas/Cadastro.html">Cadastro</a>
               <a class="nav-link" href="subPaginas/Destino pg.01.html">Destino</a>
               <a class="nav-link" href="subPaginas/Promoções.html">Promoções</a>
+              <a class="nav-link" href="subPaginas/Voos.html">Voos</a>
+              <a class="nav-link" href="subPaginas/Hoteis.html">Hotéis</a>
               <a class="nav-link" href="subPaginas/PagamentoD01.html">Pagamento</a>
+              <a class="nav-link" href="subPaginas/Passagem.html">Passagem</a>
               <a class="nav-link" href="subPaginas/Contato.html">Contato</a>
               <a class="nav-link" href="subPaginas/Sobre.html">Sobre</a>
             </div>
@@ -149,7 +152,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="../IMG/tutancâmon.jpg" style="height: 300px; object-fit: cover;" class=card-img-top"
+                <img src="../IMG/tutancâmon.jpg" style="height: 300px; object-fit: cover;" class="card-img-top"
                   alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Pirâmides de Gizé, Egito.</h5>
@@ -319,6 +322,11 @@
             </li>
             <li class="mb-1"><a class="link-secondary text-decoration-none"
                 href="subPaginas/Destino pg.01.html">Destino</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="subPaginas/Voos.html">Voos</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="subPaginas/Hoteis.html">Hotéis</a>
+            </li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="subPaginas/Passagem.html">Passagem</a>
+            </li>
             <li class="mb-1"><a class="link-secondary text-decoration-none" href="subPaginas/Contato.html">Contato</a>
             </li>
             <li class="mb-1"><a class="link-secondary text-decoration-none" href="subPaginas/Sobre.html">Sobre</a></li>
