--- a/PROJETO/subPaginas/Cadastro.html
+++ b/PROJETO/subPaginas/Cadastro.html
@@ -30,7 +30,10 @@
                             <a class="nav-link active" aria-current="page" href="Cadastro.html">Cadastro</a>
                             <a class="nav-link" href="Destino pg.01.html">Destino</a>
                             <a class="nav-link" href="Promoções.html">Promoções</a>
+                            <a class="nav-link" href="Voos.html">Voos</a>
+                            <a class="nav-link" href="Hoteis.html">Hotéis</a>
                             <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link" href="Passagem.html">Passagem</a>
                             <a class="nav-link" href="Contato.html">Contato</a>
                             <a class="nav-link" href="Sobre.html">Sobre</a>
                         </div>
@@ -112,10 +115,6 @@
                     <input type="submit" class="btn btn-primary " value="Enviar">
                     <input type="reset" class="btn btn-primary" value="Limpar">
                 </div>
-                <div class="m-1">
-                    <a class="btn btn-primary" href="Cadastro de Destino.html" role="button">Clique aqui para fazer o
-                        Cadastro de Destino</a>
-                </div>
             </form>
         </main>
         <!-- FIM DO CADASTRO -->
@@ -134,6 +133,12 @@
                                 href="../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Destino pg.01.html">Destino</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../subPaginas/Voos.html">Voos</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
