--- a/PROJETO/subPaginas/Hoteis.html
+++ b/PROJETO/subPaginas/Hoteis.html
@@ -30,8 +30,11 @@
                             <a class="nav-link" href="Cadastro.html">Cadastro</a>
                             <a class="nav-link" href="Destino pg.01.html">Destino</a>
                             <a class="nav-link" href="Promoções.html">Promoções</a>
+                            <a class="nav-link" href="Voos.html">Voos</a>
+                            <a class="nav-link active" aria-current="page" href="Hoteis.html">Hotéis</a>
                             <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
-                            <a class="nav-link active" aria-current="page" href="Contato.html">Contato</a>
+                            <a class="nav-link" href="Passagem.html">Passagem</a>
+                            <a class="nav-link" href="Contato.html">Contato</a>
                             <a class="nav-link" href="Sobre.html">Sobre</a>
                         </div>
                     </div>
@@ -39,12 +42,191 @@
             </nav>
         </header>
         <!-- FIM BARRA DE NAVEGAÇÃO -->
-        <!-- INÍCIO DA ÁREA DE CONTATO -->
-       
-
-
-
-        <!-- FIM DA ÁREA DE CONTATO -->
+        <!-- INÍCIO DO BANNER -->
+        <div class="position-relative overflow-hidden md-1 md-1">
+            <img src="../../IMG/Hotel.jpg" style="height: 700px; width: 100%;">
+        </div>
+        <!-- FIM DO BANNER -->
+        <!--INÍCIO DA ÁREA DE HOTÉIS -->
+        <main>
+            <div class="container">
+                <table class="table table-light">
+                    <thead class="table table-dark table-striped">
+                        <tr>
+                            <td class="col">Para onde vamos?</td>
+                            <td class="col">Check-in</td>
+                            <td class="col">Noites</td>
+                            <td class="col">Adultos</td>
+                            <td class="col">Localizar:</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Escolha...</option>
+                                    <option value="1">Alberta, Canadá</option>
+                                    <option value="2">Bangkokl, Tailândia</option>
+                                    <option value="3">Chichén-Itzá, Yuc., Mexico</option>
+                                    <option value="4">Dublin, Irlanda</option>
+                                    <option value="5">Fernando de Noronha, Brasil</option>
+                                    <option value="6">Fujinomiya, Shizuoka, Japão</option>
+                                    <option value="7">Ilhas Maldivas, Ásia Meridional</option>
+                                    <option value="8">Kruger Park, África do Sul</option>
+                                    <option value="9">Lagos, Portugal</option>
+                                    <option value="10">Londres, Inglaterra</option>
+                                    <option value="11">Machu Picchu, Peru</option>
+                                    <option value="12">Madri, Espanha</option>
+                                    <option value="13">Patagônia, Chile</option>
+                                    <option value="14">Rio de Janeiro, Brasil</option>
+                                    <option value="15">Roma, Itália</option>
+                                    <option value="16">São Paulo, Brasil</option>
+                                    <option value="17">Santorini, Grecia</option>
+                                    <option value="18">Torre Eiffel, Paris</option>
+                                </select>
+                            </td>
+                            <td>
+                                <div class="mb-3">
+                                    <input type="date" name="data" id="data" class="form-control" required>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="mb-3">
+                                    <input type="number" name="num" id="num" class="form-control" required
+                                        placeholder="Digite um Número">
+                                </div>
+                            </td>
+                            <td>
+                                <div class="mb-3">
+                                    <input type="number" name="num" id="num" class="form-control" required
+                                        placeholder="Digite um Número">
+                                </div>
+                            </td>
+                            <td>
+                                <button class="btn btn-primary" type="submit">Buscar Hotéis</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="row g-0 border rounded overflow-hidden flex-md-row mb-2 shadow-sm h-md-250 position-relative bg-light"
+                    style="height:100%">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <h3 class="featurette-heading">Mais de 33 milhões de brasileiros não têm acesso à internet.</h3>
+                        <span class="text-muted">Grupo é formado principalmente por pessoas negras, que estão nas
+                            classes C, D e E, e que são menos escolarizadas.</span>
+                        <p class="card-text mb-auto">Segundo estudo do Instituto Locomotiva e da consultoria PWC, 71% da
+                            população com mais de 16 anos não consegue usar a internet todos os dias. As condições de
+                            acesso à
+                            internet no Brasil ainda são bastante desiguais. Um estudo do Instituto
+                            Locomotivas e da empresa de consultoria PwC identificou que 33,9 milhões de pessoas estão
+                            desconectadas e outras 86,6 milhões não conseguem se conectar todos os dias.</p>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="../../IMG/Acrópole, Atenas..jpg"
+                            style="height: 100%; width: 550px; object-fit: cover;" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-md-6">
+                        <div
+                            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <h3 class="mb-0">Featured post</h3>
+                                <div class="mb-1 text-muted">Nov 12</div>
+                                <p class="card-text mb-auto">This is a wider card with supporting text below as
+                                    a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="d-lg-block">
+                                <img src="../../IMG/Aeroporto.jpg" width="100%" height="250">
+                                </img>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div
+                            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <h3 class="mb-0">Featured post</h3>
+                                <div class="mb-1 text-muted">Nov 12</div>
+                                <p class="card-text mb-auto">This is a wider card with supporting text below as
+                                    a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="d-lg-block">
+                                <img src="../../IMG/Aeroporto.jpg" width="100%" height="250">
+                                </img>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div
+                            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <h3 class="mb-0">Featured post</h3>
+                                <div class="mb-1 text-muted">Nov 12</div>
+                                <p class="card-text mb-auto">This is a wider card with supporting text below as
+                                    a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="d-lg-block">
+                                <img src="../../IMG/Aeroporto.jpg" width="100%" height="250">
+                                </img>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div
+                            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <h3 class="mb-0">Featured post</h3>
+                                <div class="mb-1 text-muted">Nov 12</div>
+                                <p class="card-text mb-auto">This is a wider card with supporting text below as
+                                    a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="d-lg-block">
+                                <img src="../../IMG/Aeroporto.jpg" width="100%" height="250">
+                                </img>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div
+                            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <h3 class="mb-0">Featured post</h3>
+                                <div class="mb-1 text-muted">Nov 12</div>
+                                <p class="card-text mb-auto">This is a wider card with supporting text below as
+                                    a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="d-lg-block">
+                                <img src="../../IMG/Aeroporto.jpg" width="100%" height="250">
+                                </img>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div
+                            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">World</strong>
+                                <h3 class="mb-0">Featured post</h3>
+                                <div class="mb-1 text-muted">Nov 12</div>
+                                <p class="card-text mb-auto">This is a wider card with supporting text below as
+                                    a natural lead-in to additional content.</p>
+                            </div>
+                            <div class="d-lg-block">
+                                <img src="../../IMG/Aeroporto.jpg" width="100%" height="250">
+                                </img>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!-- FIM DA ÁREA DE HOTÉIS -->
         <!-- INÍCIO DO FOOTER -->
         <footer class="pt-4 my-md-0 pt-md-2 border-top bg-warning">
             <div class="row">
@@ -61,6 +243,12 @@
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Destino pg.01.html">Destino</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../subPaginas/Voos.html">Voos</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../subPaginas/Passagem.html">Passagem</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Sobre.html">Sobre</a></li>
@@ -68,8 +256,7 @@
                 </div>
             </div>
         </footer>
-        <!-- FIM DO FOOTER -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        <!-- FIM DO FOOTER -->delivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
             integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
