--- a/PROJETO/subPaginas/Pagamento Promoções/PagamentoP03.html
+++ b/PROJETO/subPaginas/Pagamento Promoções/PagamentoP03.html
@@ -12,34 +12,37 @@
 
 <body>
     <div class="section">
-        <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-                <div class="container-fluid">
-                    <div>
-                        <img src="../../../IMG/Logo.png" width="250px" height="120px">
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link" href="../../Home.html">Home</a>
-                            <a class="nav-link" href="../Cadastro.html">Cadastro</a>
-                            <a class="nav-link" href="../Destino pg.01.html">Destino</a>
-                            <a class="nav-link" href="../Promoções.html">Promoções</a>
-                            <a class="nav-link active" aria-current="page"
-                                href="../../subPaginas/PagamentoD01.html">Pagamento</a>
-                            <a class="nav-link" href="../Contato.html">Contato</a>
-                            <a class="nav-link" href="../Sobre.html">Sobre</a>
-                        </div>
+       <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
+       <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+            <div class="container-fluid">
+                <div>
+                    <img src="../../../IMG/Logo.png" width="250px" height="120px">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" href="../../Home.html">Home</a>
+                        <a class="nav-link" href="../Cadastro.html">Cadastro</a>
+                        <a class="nav-link" href="../Destino pg.01.html">Destino</a>
+                        <a class="nav-link" href="../Promoções.html">Promoções</a>
+                        <a class="nav-link" href="../Voos.html">Voos</a>
+                        <a class="nav-link" href="../Hoteis.html">Hotéis</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="../../subPaginas/PagamentoD01.html">Pagamento</a>
+                        <a class="nav-link" href="../Passagem.html">Passagem</a>
+                        <a class="nav-link" href="../Contato.html">Contato</a>
+                        <a class="nav-link" href="../Sobre.html">Sobre</a>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <!-- FIM BARRA DE NAVEGAÇÃO -->
+            </div>
+        </nav>
+    </header>
+    <!-- FIM BARRA DE NAVEGAÇÃO -->
         <!-- INÍCIO DA ÁREA DE PAGAMENTO -->
         <div class="container">
             <main>
@@ -272,6 +275,12 @@
                                 href="../../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../../subPaginas/Destino pg.01.html">Destino</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../../subPaginas/Voos.html">Voos</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../../subPaginas/Hoteis.html">Hotéis</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none"
+                                href="../../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
