--- a/PROJETO/subPaginas/Passagem.html
+++ b/PROJETO/subPaginas/Passagem.html
@@ -2,52 +2,51 @@
 <html lang="pt-br">
 
 <head>
-    <title>Pagamento</title>
+    <title>Passagem</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../subPaginas/subPastaCSS/Pagamento.css">
+    <link rel="stylesheet" href="../subPaginas/subPastaCSS/Passagem.css">
 </head>
 
 <body>
     <div class="section">
-      <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-            <div class="container-fluid">
-                <div>
-                    <img src="../../../IMG/Logo.png" width="250px" height="120px">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" href="../../Home.html">Home</a>
-                        <a class="nav-link" href="../Cadastro.html">Cadastro</a>
-                        <a class="nav-link" href="../Destino pg.01.html">Destino</a>
-                        <a class="nav-link" href="../Promoções.html">Promoções</a>
-                        <a class="nav-link" href="../Voos.html">Voos</a>
-                        <a class="nav-link" href="../Hoteis.html">Hotéis</a>
-                        <a class="nav-link active" aria-current="page"
-                            href="../../subPaginas/PagamentoD01.html">Pagamento</a>
-                        <a class="nav-link" href="../Passagem.html">Passagem</a>
-                        <a class="nav-link" href="../Contato.html">Contato</a>
-                        <a class="nav-link" href="../Sobre.html">Sobre</a>
+        <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+                <div class="container-fluid">
+                    <div>
+                        <img src="../../IMG/Logo.png" width="250px" height="120px">
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="../Home.html">Home</a>
+                            <a class="nav-link" href="Cadastro.html">Cadastro</a>
+                            <a class="nav-link" href="Destino pg.01.html">Destino</a>
+                            <a class="nav-link" href="Promoções.html">Promoções</a>
+                            <a class="nav-link" href="Voos.html">Voos</a>
+                            <a class="nav-link" href="Hoteis.html">Hotéis</a>
+                            <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link active" aria-current="page" href="Passagem.html">Passagem</a>
+                            <a class="nav-link" href="Contato.html">Contato</a>
+                            <a class="nav-link" href="Sobre.html">Sobre</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <!-- FIM BARRA DE NAVEGAÇÃO -->
+            </nav>
+        </header>
+        <!-- FIM BARRA DE NAVEGAÇÃO -->
         <!-- INÍCIO DA ÁREA DE PAGAMENTO -->
         <div class="container">
             <main>
                 <div class="py-5 text-center">
-                    <img class="d-block mx-auto mb-4" src="../../../IMG/LogoNegativo.png" alt="" width="300px"
+                    <img class="d-block mx-auto mb-4" src="../../IMG/LogoNegativo.png" alt="" width="300px"
                         height="150px">
                     <h2>Por favor, verifique o Formulário!</h2>
                 </div>
@@ -59,20 +58,19 @@
                         <ul class="list-group mb-3">
                             <li class="list-group-item d-flex justify-content-between lh-sm">
                                 <div>
-                                    <h6 class="my-0"> Chichén-Itzá, Yuc., Mexico </h6>
-                                    <small class="text-muted">(Modelo de Demonstração)</small>
+                                    <h6 class="my-0"> Nenhum Produto Selecionado</h6>
                                 </div>
-                                <span class="text-muted">R$8.915,00</span>
+                                <span class="text-muted"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between bg-light">
                                 <div class="text-success">
                                     <h6 class="my-0">Código promocional</h6>
                                 </div>
-                                <span class="text-success">-R$1.820</span>
+                                <span class="text-success"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between">
                                 <span>Total (R$)</span>
-                                <strong>R$7.095,00</strong>
+                                <strong></strong>
                             </li>
                         </ul>
                         <form class="card p-2">
@@ -264,27 +262,27 @@
         <footer class="pt-4 my-md-0 pt-md-2 border-top bg-warning">
             <div class="row">
                 <div class="col-6 m-lg-auto col-md">
-                    <img src="../../../IMG/Logo (laranja).png" width="240px" height="140px">
+                    <img src="../../IMG/Logo (laranja).png" width="240px" height="140px">
                 </div>
                 <div class="col-6 col-md">
                     <h5 class="sky">SKYTOUR</h5>
                     <ul class="list-unstyled text-small">
-                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="../../Home.html">Home</a>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="../Home.html">Home</a>
                         </li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Cadastro.html">Cadastro</a></li>
+                                href="../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Destino pg.01.html">Destino</a></li>
+                                href="../subPaginas/Destino pg.01.html">Destino</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Voos.html">Voos</a></li>
+                                href="../subPaginas/Voos.html">Voos</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Hoteis.html">Hotéis</a></li>
+                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Passagem.html">Passagem</a></li>
+                                href="../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Contato.html">Contato</a></li>
+                                href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../../subPaginas/Sobre.html">Sobre</a></li>
+                                href="../subPaginas/Sobre.html">Sobre</a></li>
                     </ul>
                 </div>
             </div>
