2° FASE DA REFORMULÇÃO DO SITE CONCLUÍDA

--- a/PROJETO/subPaginas/Agradecimento.html
+++ b/PROJETO/subPaginas/Agradecimento.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 
 <head>
-    <title>Contato</title>
+    <title>Passagem</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../subPaginas/subPastaCSS/Contato.css">
+    <link rel="stylesheet" href="../subPaginas/subPastaCSS/Agradecimento.css">
 </head>
 
 <body>
@@ -33,8 +33,8 @@
                             <a class="nav-link" href="Voos.html">Voos</a>
                             <a class="nav-link" href="Hoteis.html">Hotéis</a>
                             <a class="nav-link" href="PagamentoD01.html">Pagamento</a>
-                            <a class="nav-link" href="Passagem.html">Passagem</a>
-                            <a class="nav-link active" aria-current="page" href="Contato.html">Contato</a>
+                            <a class="nav-link active" aria-current="page" href="Passagem.html">Passagem</a>
+                            <a class="nav-link" href="Contato.html">Contato</a>
                             <a class="nav-link" href="Sobre.html">Sobre</a>
                         </div>
                     </div>
@@ -42,51 +42,35 @@
             </nav>
         </header>
         <!-- FIM BARRA DE NAVEGAÇÃO -->
-        <!-- INÍCIO DA ÁREA DE CONTATO -->
-        <main class="container d-flex justify-content-center flex-column">
-            <div>
-                <h1>Central de Atendimento</h1>
-            </div>
-            <!--Suporte-->
-            <h5 class="m-1">Suporte:</h5>
-            <div class="contato bg-light">
-                <p class="m-3">Suporte Pós Venda 11 4002 8922</p>
-            </div>
-            <!--Remarcação-->
-            <h5 class="m-1">Remarcações:</h5>
-            <div class="contato bg-light">
-                <p class="m-3">Remarcações de viagens 11 2298 0204</p>
-            </div>
-            <!--SAC-->
-            <h5 class="m-1">SAC:</h5>
-            <div class="contato bg-light">
-                <p class="m-3">11 2249 2022 / 0800 4022 8902</p>
-            </div>
-            <!--Central de Ajuda-->
-            <div class="m-1">
-                <h5 class="m-1">Central de Ajuda:</h5>
-                <p class="m-1">
-                    Envie a sua duvida para nosso e-mail:
-                </p>
-                <form action="">
-                    <div class="contato bg-light">
-                        <div class="m-1">
-                            <div class="mb-3 m-1">
-                                <label for="endereçoEmail" class="form-label"> Endereço de Email: </label>
-                                <input type="email" class="form-control" id="endereçoEmail"
-                                    placeholder="nome@exemplo.com">
+        <!-- INÍCIO DA ÁREA DE EMBARQUE -->
+        <main>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../../IMG/passagem.jpg" class="d-block w-100"
+                            style="height: 1000px; object-fit: cover;" alt="...">
+                        <div class="container">
+                            <div class="carousel-caption col-auto p-lg-5 mx-auto my-5 text-white">
+                                <div class="container py-4">
+                                    <div class="p-5 mb-4 rounded-3">
+                                        <div class="container-fluid">
+                                            <h1>Obrigado!</h1>
+                                            <p class="fs-4">Você receberá um e-mail com todas as informações da sua
+                                                compra :)
+                                            </p>
+                                            <a class="btn btn-warning text-light btn-lg m-1" href="../Home.html"
+                                                role="button">Continue
+                                                Explorando</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="mb-3 m-1">
-                                <label for="mensagem" class="form-label">Mensagem:</label>
-                                <textarea class="form-control" id="mensagem" rows="3"></textarea>
-                            </div>
-                            <input type="submit" class="btn btn-primary m-1" value="Enviar"></input>
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
         </main>
-        <!-- FIM DA ÁREA DE CONTATO -->
+        <!-- FIM DA ÁREA DE EMBARQUE -->
         <!-- INÍCIO DO FOOTER -->
         <footer class="pt-4 my-md-0 pt-md-2 border-top bg-warning">
             <div class="row">
