--- a/PROJETO/subPaginas/Cadastro.html
+++ b/PROJETO/subPaginas/Cadastro.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="Promoções.html">Promoções</a>
                             <a class="nav-link" href="Voos.html">Voos</a>
                             <a class="nav-link" href="Hoteis.html">Hotéis</a>
-                            <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link" href="PagamentoD01.html">Pagamento</a>
                             <a class="nav-link" href="Passagem.html">Passagem</a>
                             <a class="nav-link" href="Contato.html">Contato</a>
                             <a class="nav-link" href="Sobre.html">Sobre</a>
@@ -44,116 +44,145 @@
         <!-- FIM BARRA DE NAVEGAÇÃO -->
         <!-- INÍCIO DO CADASTRO -->
         <main class="container d-flex m-2 justify-content-center flex-column">
-            <h1>Cadastro Cliente</h1>
-            <form action="">
-                <!--Nome-->
-                <div class="mb-3">
-                    <label for="nome" class="form-label">Nome:</label>
-                    <input type="text" name="nome" id="nome" class="form-control" required placeholder="Nome:">
-                </div>
-                <!--Email-->
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email:</label>
-                    <input type="email" name="email" id="email" class="form-control" required placeholder="Email:">
-                </div>
-                <!--Gênero-->
-                <div class="mb-3">
-                    <input type="radio" name="opc" id="masc" value="masc" required>
-                    <label for="masc">masculino</label>
-                    <input type="radio" name="opc" id="fem" value="fem" required>
-                    <label for="fem">feminino</label>
-                </div>
-                <!--Data de Nascimento-->
-                <div class="mb-3">
-                    <label for="data" class="form-label">Data de Nascimento:</label>
-                    <input type="date" name="data" id="data" class="form-control" required>
-                </div>
-                <!--Cidade-->
-                <div class="mb-3">
-                    <label for="cidade" class="form-label">Cidade:</label>
-                    <input type="text" id="cidade" class="form-control" required placeholder="Digite o nome da Cidade:">
-                </div>
-                <!--Estado-->
-                <label for="estado" class="form-label">Estado:</label>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Escolha um Estado:</option>
-                    <option value="1">Acre</option>
-                    <option value="2">Alagoas</option>
-                    <option value="3">Amapá</option>
-                    <option value="4">Amazonas</option>
-                    <option value="5">Bahia</option>
-                    <option value="6">Ceará</option>
-                    <option value="7">Espírito Santo</option>
-                    <option value="8">Goiás</option>
-                    <option value="9">Maranhão</option>
-                    <option value="10">Mato Grosso</option>
-                    <option value="11">Mato Grosso do Sul</option>
-                    <option value="12">Minas Gerais</option>
-                    <option value="13">Pará</option>
-                    <option value="14">Paraíba</option>
-                    <option value="15">Paraná</option>
-                    <option value="16">Pernambuco</option>
-                    <option value="17">Piauí</option>
-                    <option value="18">Rio de Janeiro</option>
-                    <option value="19">Rio Grande do Norte</option>
-                    <option value="20">Rio Grande do Sul</option>
-                    <option value="21">Rondônia</option>
-                    <option value="22">Roraima</option>
-                    <option value="23">Santa Catarina</option>
-                    <option value="24">São Paulo</option>
-                    <option value="25">Sergipe</option>
-                    <option value="26">Tocantins</option>
-                </select>
-                <!--Telefone-->
-                <div class="mb-3">
-                    <label for="tel" class="form-label">Telefone:</label>
-                    <input type="tel" name="tel" id="tel" class="form-control" maxlength="11" required
-                        placeholder="Ex: 11912345678">
-                </div>
-                <!--Button enviar-->
-                <div class="m-1">
-                    <input type="submit" class="btn btn-primary " value="Enviar">
-                    <input type="reset" class="btn btn-primary" value="Limpar">
-                </div>
-            </form>
-        </main>
-        <!-- FIM DO CADASTRO -->
-        <!-- INÍCIO DO FOOTER -->
-        <footer class="pt-4 my-md-0 pt-md-2 border-top bg-warning">
-            <div class="row">
-                <div class="col-6 m-lg-auto col-md">
-                    <img src="../../IMG/Logo (laranja).png" width="240px" height="140px">
-                </div>
-                <div class="col-6 col-md">
-                    <h5 class="sky">SKYTOUR</h5>
-                    <ul class="list-unstyled text-small">
-                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="../Home.html">Home</a>
-                        </li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Cadastro.html">Cadastro</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Destino pg.01.html">Destino</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Voos.html">Voos</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Passagem.html">Passagem</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Contato.html">Contato</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Sobre.html">Sobre</a></li>
-                    </ul>
-                </div>
+            <div class="container">
+                <h1>Cadastro Cliente</h1>
+                <form action="">
+                    <!--Nome-->
+                    <div class="mb-3">
+                        <label for="nome" class="form-label">Nome:</label>
+                        <input type="text" name="nome" id="nome" class="form-control" required placeholder="Nome:">
+                    </div>
+                    <!--RG-->
+                    <div class="mb-3">
+                        <label for="rg" class="form-label">RG:</label>
+                        <input type="text" name="rg" id="rg" class="form-control" required
+                            placeholder="Ex:17.438.081-1">
+                    </div>
+                    <!--CPF-->
+                    <div class="mb-3">
+                        <label for="cpf" class="form-label">CPF:</label>
+                        <input type="text" name="cpf" id="cpf" class="form-control" required
+                            placeholder="Ex:147.851.070-65">
+                    </div>
+                    <!--Data de Nascimento-->
+                    <div class="mb-3">
+                        <label for="data" class="form-label">Data de Nascimento:</label>
+                        <input type="date" name="data" id="data" class="form-control" required>
+                    </div>
+                    <!--Endereço-->
+                    <div class="mb-3">
+                        <label for="endereco" class="form-label">Endereço</label>
+                        <input type="text" class="form-control" id="endereco" placeholder="Rua, Bairro, Cidade"
+                            required>
+                        <div class="invalid-feedback">
+                            Por favor, digite seu endereço.
+                        </div>
+                    </div>
+                    <!--Complemento-->
+                    <div class="mb-3">
+                        <label for="complemento" class="form-label">Complemento<span
+                                class="text-muted">(Opcional)</span></label>
+                        <input type="text" class="form-control" id="complemento"
+                            placeholder="Apartamento ou Numero da Casa">
+                    </div>
+                    <div class="row g-3">
+                        <!--CEP-->
+                        <div class="col-md-3">
+                            <label for="cep" class="form-label">CEP</label>
+                            <input type="text" class="form-control" id="cep" placeholder="00000-000" required>
+                            <div class="invalid-feedback">
+                                CEP necessário.
+                            </div>
+                        </div>
+                        <!--Estado-->
+                        <div class="col-md-4">
+                            <label for="estado " class="form-label">Estado</label>
+                            <select class="form-select" id="estado " required>
+                                <option value="">Escolher...</option>
+                                <option>Acre</option>
+                                <option>Alagoas</option>
+                                <option>Amapá</option>
+                                <option>Amazonas</option>
+                                <option>Bahia</option>
+                                <option>Ceará</option>
+                                <option>Espírito Santo</option>
+                                <option>Goiás</option>
+                                <option>Maranhão</option>
+                                <option>Mato Grosso</option>
+                                <option>Mato Grosso do Sul</option>
+                                <option>Minas Gerais</option>
+                                <option>Pará</option>
+                                <option>Paraíba</option>
+                                <option>Paraná</option>
+                                <option>Pernambuco</option>
+                                <option>Piauí</option>
+                                <option>Rio de Janeiro</option>
+                                <option>Rio Grande do Norte</option>
+                                <option>Rio Grande do Sul</option>
+                                <option>Rondônia</option>
+                                <option>Roraima</option>
+                                <option>Santa Catarina</option>
+                                <option>São Paulo</option>
+                                <option>Sergipe</option>
+                                <option>Tocantins</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Por favor, forneça um estado válido.
+                            </div>
+                        </div>
+                    </div>
+                    <!--Email-->
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email:</label>
+                        <input type="email" name="email" id="email" class="form-control" required placeholder="Email:">
+                    </div>
+                    <!--Telefone-->
+                    <div class="mb-3">
+                        <label for="tel" class="form-label">Telefone:</label>
+                        <input type="tel" name="tel" id="tel" class="form-control" maxlength="11" required
+                            placeholder="Ex: 11912345678">
+                    </div>
+                   
+                    <!--Button enviar-->
+                    <div class="m-1">
+                        <input type="submit" class="btn btn-primary " value="Enviar">
+                        <input type="reset" class="btn btn-primary" value="Limpar">
+                    </div>
+                </form>
             </div>
-        </footer>
-        <!-- FIM DO FOOTER -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-            integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
-            integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
-            crossorigin="anonymous"></script>
+        </main>
+    </div>
+    <!-- FIM DO CADASTRO -->
+    <!-- INÍCIO DO FOOTER -->
+    <footer class="pt-4 my-md-0 pt-md-2 border-top bg-warning">
+        <div class="row">
+            <div class="col-6 m-lg-auto col-md">
+                <img src="../../IMG/Logo (laranja).png" width="240px" height="140px">
+            </div>
+            <div class="col-6 col-md">
+                <h5 class="sky">SKYTOUR</h5>
+                <ul class="list-unstyled text-small">
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="../Home.html">Home</a>
+                    </li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none"
+                            href="../subPaginas/Cadastro.html">Cadastro</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none"
+                            href="../subPaginas/Destino pg.01.html">Destino</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none"
+                            href="../subPaginas/Contato.html">Contato</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none"
+                            href="../subPaginas/Sobre.html">Sobre</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!-- FIM DO FOOTER -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+        crossorigin="anonymous"></script>
     </div>
 </body>
 
