--- a/PROJETO/subPaginas/Destino pg.01.html
+++ b/PROJETO/subPaginas/Destino pg.01.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="Promoções.html">Promoções</a>
                             <a class="nav-link" href="Voos.html">Voos</a>
                             <a class="nav-link" href="Hoteis.html">Hotéis</a>
-                            <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link" href="PagamentoD01.html">Pagamento</a>
                             <a class="nav-link" href="Passagem.html">Passagem</a>
                             <a class="nav-link" href="Contato.html">Contato</a>
                             <a class="nav-link" href="Sobre.html">Sobre</a>
@@ -64,8 +64,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD02.html" role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -80,7 +80,7 @@
                         <div class="card h-100">
                             <img src="../../IMG/Santorini, Greece.png" height="400px" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Santorini, Grecia</h5>
+                                <h5 class="card-title">Santorini, Grécia</h5>
                                 <p class="card-text">Uma das ilhas mais famosas da Grécia, Santorini é conhecida por
                                     conta das casas brancas à beira mar, das igrejas de cúpula azul, das apertadas
                                     vielas decoradas com flores coloridas e, claro, das praias paradisíacas.
@@ -93,8 +93,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD03.html" role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -123,8 +123,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD04.html" role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -157,7 +157,7 @@
                             </div>
                             <div class="card-footer">
                                 <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD05.html" role="button">Comprar</a>
+                                    href="../subPaginas/Voos.html" role="button">Seguir para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -186,7 +186,7 @@
                             </div>
                             <div class="card-footer">
                                 <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD06.html" role="button">Comprar</a>
+                                    href="../subPaginas/Voos.html" role="button">Seguir para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -217,8 +217,7 @@
                             </div>
                             <div class="card-footer">
                                 <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD07.html"
-                                    role="button">Comprar</a><br>
+                                    href="../subPaginas/Voos.html" role="button">Seguir para a Área de Embarque</a><br>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -264,12 +263,6 @@
                                 href="../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Destino pg.01.html">Destino</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Voos.html">Voos</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
