--- a/PROJETO/subPaginas/Destino pg.02.html
+++ b/PROJETO/subPaginas/Destino pg.02.html
@@ -12,36 +12,36 @@
 
 <body>
     <div class="home">
-       <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
-       <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-            <div class="container-fluid">
-                <div>
-                    <img src="../../IMG/Logo.png" width="250px" height="120px">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" href="../Home.html">Home</a>
-                        <a class="nav-link" href="Cadastro.html">Cadastro</a>
-                        <a class="nav-link active" aria-current="page" href="Destino pg.01.html">Destino</a>
-                        <a class="nav-link" href="Promoções.html">Promoções</a>
-                        <a class="nav-link" href="Voos.html">Voos</a>
-                        <a class="nav-link" href="Hoteis.html">Hotéis</a>
-                        <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
-                        <a class="nav-link" href="Passagem.html">Passagem</a>
-                        <a class="nav-link" href="Contato.html">Contato</a>
-                        <a class="nav-link" href="Sobre.html">Sobre</a>
+        <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+                <div class="container-fluid">
+                    <div>
+                        <img src="../../IMG/Logo.png" width="250px" height="120px">
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="../Home.html">Home</a>
+                            <a class="nav-link" href="Cadastro.html">Cadastro</a>
+                            <a class="nav-link active" aria-current="page" href="Destino pg.01.html">Destino</a>
+                            <a class="nav-link" href="Promoções.html">Promoções</a>
+                            <a class="nav-link" href="Voos.html">Voos</a>
+                            <a class="nav-link" href="Hoteis.html">Hotéis</a>
+                            <a class="nav-link" href="PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link" href="Passagem.html">Passagem</a>
+                            <a class="nav-link" href="Contato.html">Contato</a>
+                            <a class="nav-link" href="Sobre.html">Sobre</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <!-- FIM BARRA DE NAVEGAÇÃO -->
+            </nav>
+        </header>
+        <!-- FIM BARRA DE NAVEGAÇÃO -->
         <!-- INÍCIO DA ÁREA DE DESTINO -->
         <main class="container">
             <section>
@@ -64,8 +64,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD08.html" role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -95,8 +95,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD09.html" role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -124,8 +124,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary"
-                                    href="../subPaginas/Pagamento Destinos/PagamentoD10.html" role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -243,12 +243,6 @@
                                 href="../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Destino pg.01.html">Destino</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Voos.html">Voos</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
