--- a/PROJETO/subPaginas/Promoções.html
+++ b/PROJETO/subPaginas/Promoções.html
@@ -12,36 +12,36 @@
 
 <body>
     <div class="home">
-      <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-            <div class="container-fluid">
-                <div>
-                    <img src="../../IMG/Logo.png" width="250px" height="120px">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" href="../Home.html">Home</a>
-                        <a class="nav-link" href="Cadastro.html">Cadastro</a>
-                        <a class="nav-link" href="Destino pg.01.html">Destino</a>
-                        <a class="nav-link active" aria-current="page" href="Promoções.html">Promoções</a>
-                        <a class="nav-link" href="Voos.html">Voos</a>
-                        <a class="nav-link" href="Hoteis.html">Hotéis</a>
-                        <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
-                        <a class="nav-link" href="Passagem.html">Passagem</a>
-                        <a class="nav-link" href="Contato.html">Contato</a>
-                        <a class="nav-link" href="Sobre.html">Sobre</a>
+        <!-- INÍCIO BARRA DE NAVEGAÇÃO -->
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+                <div class="container-fluid">
+                    <div>
+                        <img src="../../IMG/Logo.png" width="250px" height="120px">
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="../Home.html">Home</a>
+                            <a class="nav-link" href="Cadastro.html">Cadastro</a>
+                            <a class="nav-link" href="Destino pg.01.html">Destino</a>
+                            <a class="nav-link active" aria-current="page" href="Promoções.html">Promoções</a>
+                            <a class="nav-link" href="Voos.html">Voos</a>
+                            <a class="nav-link" href="Hoteis.html">Hotéis</a>
+                            <a class="nav-link" href="PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link" href="Passagem.html">Passagem</a>
+                            <a class="nav-link" href="Contato.html">Contato</a>
+                            <a class="nav-link" href="Sobre.html">Sobre</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <!-- FIM BARRA DE NAVEGAÇÃO -->
+            </nav>
+        </header>
+        <!-- FIM BARRA DE NAVEGAÇÃO -->
         <!-- INÍCIO DA ÁREA DE DESTINO -->
         <main class="container">
             <section>
@@ -64,8 +64,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary" href="Pagamento Promoções/PagamentoP01.html"
-                                    role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -101,8 +101,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary" href="Pagamento Promoções/PagamentoP02.html"
-                                    role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -123,23 +123,23 @@
                         <div class="card h-100">
                             <img src="../../IMG/Espanha.jpg" height="400px" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Madri, Espanha.</h5>
-                                <p class="card-text">Com uma paisagem urbana surpreendente, a bela Madri reserva
+                                <h5 class="card-title">Madrid, Espanha.</h5>
+                                <p class="card-text">Com uma paisagem urbana surpreendente, a bela Madrid reserva
                                     atrações incríveis para quem quer aproveitar sua viagem para a Espanha. A começar
                                     pelo famoso trio de museus – Reina Sofia, Thyssen-Bornomisza e del Prado, as
                                     construções históricas da capital espanhola revelam uma arquitetura rebuscada.
                                 </p>
                                 <p>
-                                    O turismo em Madri também é movimentado pela gastronomia espanhola, conhecida pelas
+                                    O turismo em Madrid também é movimentado pela gastronomia espanhola, conhecida pelas
                                     tapas espanholas, petiscos servidos antes das refeições. Um bom vinho também deve
                                     fazer parte do seu roteiro de viagem. Não deixe de fazer um passeio pelo trem de
-                                    Madri, o trem-bala que percorre
+                                    Madrid, o trem-bala que percorre
                                     diferentes trajetos pela Espanha.
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary" href="Pagamento Promoções/PagamentoP03.html"
-                                    role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -176,8 +176,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary" href="Pagamento Promoções/PagamentoP04.html"
-                                    role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -211,8 +211,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary" href="Pagamento Promoções/PagamentoP05.html"
-                                    role="button">Comprar</a>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -246,8 +246,8 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="w-100 btn btn-primary" href="Pagamento Promoções/PagamentoP06.html"
-                                    role="button">Comprar</a><br>
+                                <a class="w-100 btn btn-primary" href="../subPaginas/Voos.html" role="button">Seguir
+                                    para a Área de Embarque</a><br>
                                 <small class="text-muted">(Modelo de Demonstração)</small>
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
@@ -283,12 +283,6 @@
                                 href="../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Destino pg.01.html">Destino</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Voos.html">Voos</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
