--- a/PROJETO/subPaginas/Sobre.html
+++ b/PROJETO/subPaginas/Sobre.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="Promoções.html">Promoções</a>
                             <a class="nav-link" href="Voos.html">Voos</a>
                             <a class="nav-link" href="Hoteis.html">Hotéis</a>
-                            <a class="nav-link" href="../subPaginas/PagamentoD01.html">Pagamento</a>
+                            <a class="nav-link" href="PagamentoD01.html">Pagamento</a>
                             <a class="nav-link" href="Passagem.html">Passagem</a>
                             <a class="nav-link" href="Contato.html">Contato</a>
                             <a class="nav-link active" aria-current="page" href="Sobre.html">Sobre</a>
@@ -103,12 +103,6 @@
                                 href="../subPaginas/Cadastro.html">Cadastro</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Destino pg.01.html">Destino</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Voos.html">Voos</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Hoteis.html">Hotéis</a></li>
-                        <li class="mb-1"><a class="link-secondary text-decoration-none"
-                                href="../subPaginas/Passagem.html">Passagem</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
                                 href="../subPaginas/Contato.html">Contato</a></li>
                         <li class="mb-1"><a class="link-secondary text-decoration-none"
