--- a/PROJETO/subPaginas/Destino pg.01.html
+++ b/PROJETO/subPaginas/Destino pg.01.html
@@ -172,7 +172,7 @@
                         <div class="card h-100">
                             <img src="../../IMG/Paris-Destino.jpg" height="400px" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Torre Eiffel, Paris.</h5>
+                                <h5 class="card-title">Paris, França.</h5>
                                 <p class="card-text">Um dos destinos mais românticos do mundo, Paris atrai muitos
                                     turistas por conta de seus museus, gastronomia ímpar, monumentos importantes e por
                                     todas as histórias que cercam a capital da França.</p>
