--- a/PROJETO/subPaginas/Hoteis.html
+++ b/PROJETO/subPaginas/Hoteis.html
@@ -84,7 +84,7 @@
                                         <option value="15">Roma, Itália</option>
                                         <option value="16">São Paulo, Brasil</option>
                                         <option value="17">Santorini, Grecia</option>
-                                        <option value="18">Torre Eiffel, Paris</option>
+                                        <option value="18">Paris, França</option>
                                     </select>
                                 </td>
                                 <td>
@@ -215,7 +215,7 @@
                         <div
                             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary">Torre Eiffel, Paris</strong>
+                                <strong class="d-inline-block mb-2 text-primary">Paris, França</strong>
                                 <h3 class="mb-0">Mayfair Paris Hotel</h3>
                                 <p class="card-text mb-auto">Uma opção que mistura o clássico e o moderno num prédio
                                     clássico de estilo haussmaniano. Os quartos são super charmosos, bem decorados e
