--- a/PROJETO/subPaginas/Voos.html
+++ b/PROJETO/subPaginas/Voos.html
@@ -89,7 +89,7 @@
                                     <option value="15">Roma, Itália</option>
                                     <option value="16">São Paulo, Brasil</option>
                                     <option value="17">Santorini, Grecia</option>
-                                    <option value="18">Torre Eiffel, Paris</option>
+                                    <option value="18">Paris, França</option>
                                 </select>
                             </td>
                             <td>
@@ -125,17 +125,8 @@
                             <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Machu Picchu, Peru</td>
-                            <td>13:10 07/09/22</td>
-                            <td>22:10 07/09/22</td>
-                            <td>2</td>
-                            <td>R$1.634,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Machu Picchu, Peru</td>
-                            <td>13:10 07/09/22</td>
-                            <td>22:10 07/09/22</td>
+                            <td>13:10 12/10/22</td>
+                            <td>22:10 12/10/22</td>
                             <td>2</td>
                             <td>R$1.634,00</td>
                         </tr>
@@ -162,19 +153,10 @@
                     <tbody>
                         <tr>
                             <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
-                            <td>São Paulo(GRU)</td>
-                            <td>Santorini, Grécia</td>
-                            <td>12:00 07/09/22</td>
-                            <td>04:00 08/09/22</td>
-                            <td>4</td>
-                            <td>R$6.007,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
                             <td>Rio de Janeiro</td>
                             <td>Santorini, Grécia</td>
-                            <td>12:00 07/09/22</td>
-                            <td>04:00 08/09/22</td>
+                            <td>12:00 08/08/22</td>
+                            <td>04:00 10/08/22</td>
                             <td>4</td>
                             <td>R$6.007,00</td>
                         </tr>
@@ -203,17 +185,8 @@
                             <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Roma, Itália</td>
-                            <td>10:00 07/09/22</td>
-                            <td>21:16 07/09/22</td>
-                            <td>3</td>
-                            <td>R$7.956,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Roma, Itália</td>
-                            <td>10:00 07/09/22</td>
-                            <td>21:16 07/09/22</td>
+                            <td>10:00 13/07/22</td>
+                            <td>21:16 13/07/22</td>
                             <td>3</td>
                             <td>R$7.956,00</td>
                         </tr>
@@ -240,19 +213,10 @@
                     <tbody>
                         <tr>
                             <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
-                            <td>São Paulo(GRU)</td>
-                            <td>Ilhas Maldivas, Ásia</td>
-                            <td>10:00 07/09/22</td>
-                            <td>02:00 08/09/22</td>
-                            <td>1</td>
-                            <td>R$9.418,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
                             <td>Rio de Janeiro</td>
                             <td>Ilhas Maldivas, Ásia</td>
-                            <td>10:00 07/09/22</td>
-                            <td>02:00 07/09/22</td>
+                            <td>10:00 09/10/22</td>
+                            <td>02:00 10/10/22</td>
                             <td>1</td>
                             <td>R$9.418,00</td>
                         </tr>
@@ -280,18 +244,9 @@
                         <tr>
                             <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
-                            <td>Torre Eiffel, Paris</td>
-                            <td>09:10 07/09/22</td>
-                            <td>20:10 07/09/22</td>
-                            <td>2</td>
-                            <td>R$3.592,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Torre Eiffel, Paris</td>
-                            <td>09:10 07/09/22</td>
-                            <td>20:10 07/09/22</td>
+                            <td>Paris, França</td>
+                            <td>09:10 12/10/22</td>
+                            <td>20:10 12/10/22</td>
                             <td>2</td>
                             <td>R$3.592,00</td>
                         </tr>
@@ -318,19 +273,10 @@
                     <tbody>
                         <tr>
                             <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
-                            <td>São Paulo(GRU)</td>
-                            <td>Alberta, Canadá</td>
-                            <td>07:10 07/09/22</td>
-                            <td>17:10 07/09/22</td>
-                            <td>1</td>
-                            <td>R$5.277,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
                             <td>Rio de Janeiro</td>
                             <td>Alberta, Canadá</td>
-                            <td>07:10 07/09/22</td>
-                            <td>17:10 07/09/22</td>
+                            <td>07:10 10/08/22</td>
+                            <td>17:10 10/08/22</td>
                             <td>1</td>
                             <td>R$5.277,00</td>
                         </tr>
@@ -359,17 +305,8 @@
                             <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Fernando de Noronha, Brasil</td>
-                            <td>10:00 07/09/22</td>
-                            <td>14:00 08/09/22</td>
-                            <td>1</td>
-                            <td>R$1.375,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Fernando de Noronha, Brasil</td>
-                            <td>10:00 07/09/22</td>
-                            <td>14:00 07/09/22</td>
+                            <td>10:00 13/07/22</td>
+                            <td>14:00 13/07/22</td>
                             <td>1</td>
                             <td>R$1.375,00</td>
                         </tr>
@@ -398,20 +335,40 @@
                             <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Rio de Janeiro</td>
-                            <td>15:10 07/09/22</td>
-                            <td>16:10 07/09/22</td>
+                            <td>15:10 12/10/22</td>
+                            <td>16:10 12/10/22</td>
                             <td>1</td>
                             <td>R$913,00</td>
                         </tr>
+                    </tbody>
+                </table>
+                <div class="p-1">
+                    <a class="btn btn-warning text-light m-1" href="../subPaginas/PagamentoD01.html"
+                        role="button">Finalizar Comprar</a>
+                    <a class="btn btn-primary m-1" href="../subPaginas/Hoteis.html" role="button">Seguir para a Área de
+                        Hospedagem</a>
+                </div>
+                <table class="table">
+                    <thead class="table table-dark table-striped">
                         <tr>
-                            <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>São Paulo(GRU)</td>
-                            <td>15:10 07/09/22</td>
-                            <td>16:10 07/09/22</td>
-                            <td>1</td>
-                            <td>R$913,00</td>
+                            <th class="col">Linha Aérea</th>
+                            <td class="col">Origem</td>
+                            <td class="col">Destino</td>
+                            <td class="col">Partida</td>
+                            <td class="col">Chegada</td>
+                            <td class="col">Paradas</td>
+                            <td class="col">Preço</td>
                         </tr>
+                    </thead>
+                    <tr>
+                        <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
+                        <td>Rio de Janeiro</td>
+                        <td>São Paulo(GRU)</td>
+                        <td>15:10 10/08/22</td>
+                        <td>16:10 10/08/22</td>
+                        <td>1</td>
+                        <td>R$913,00</td>
+                    </tr>
                     </tbody>
                 </table>
                 <div class="p-1">
@@ -437,17 +394,8 @@
                             <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Fujinomiya, Japão</td>
-                            <td>10:00 07/09/22</td>
-                            <td>10:00 08/09/22</td>
-                            <td>4</td>
-                            <td>R$13.010,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Fujinomiya, Japão</td>
-                            <td>10:00 07/09/22</td>
-                            <td>10:00 08/09/22</td>
+                            <td>10:00 12/07/22</td>
+                            <td>10:00 13/07/22</td>
                             <td>4</td>
                             <td>R$13.010,00</td>
                         </tr>
@@ -474,19 +422,10 @@
                     <tbody>
                         <tr>
                             <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
-                            <td>São Paulo(GRU)</td>
-                            <td>Londres, Inglaterra</td>
-                            <td>10:00 07/09/22</td>
-                            <td>21:00 08/09/22</td>
-                            <td>2</td>
-                            <td>R$6.459,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
                             <td>Rio de Janeiro</td>
                             <td>Londres, Inglaterra</td>
-                            <td>10:00 07/09/22</td>
-                            <td>21:00 07/09/22</td>
+                            <td>10:00 12/10/22</td>
+                            <td>21:00 12/10/22</td>
                             <td>2</td>
                             <td>R$6.459,00</td>
                         </tr>
@@ -515,17 +454,8 @@
                             <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Madrid, Espanha)</td>
-                            <td>08:00 07/09/22</td>
-                            <td>18:00 07/09/22</td>
-                            <td>3</td>
-                            <td>R$8.708,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Madrid, Espanha</td>
-                            <td>08:10 07/09/22</td>
-                            <td>18:10 07/09/22</td>
+                            <td>08:00 10/08/22</td>
+                            <td>18:00 10/08/22</td>
                             <td>3</td>
                             <td>R$8.708,00</td>
                         </tr>
@@ -552,19 +482,10 @@
                     <tbody>
                         <tr>
                             <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
-                            <td>São Paulo(GRU)</td>
-                            <td>Chichén-Itzá, Mexico</td>
-                            <td>12:10 07/09/22</td>
-                            <td>23:10 07/09/22</td>
-                            <td>2</td>
-                            <td>R$5.623,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/AZUL-AIRLINES.png" width="120px" height="45px"></td>
                             <td>Rio de Janeiro</td>
                             <td>Chichén-Itzá, Mexico</td>
-                            <td>12:10 07/09/22</td>
-                            <td>23:10 07/09/22</td>
+                            <td>12:10 13/07/22</td>
+                            <td>23:10 13/07/22</td>
                             <td>2</td>
                             <td>R$5.623,00</td>
                         </tr>
@@ -593,17 +514,8 @@
                             <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
                             <td>São Paulo(GRU)</td>
                             <td>Bangkokl, Tailândia</td>
-                            <td>08:00 07/09/22</td>
-                            <td>20:00 08/09/22</td>
-                            <td>4</td>
-                            <td>R$10.029,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/GOL.png" width="120px" height="45px"></td>
-                            <td>Rio de Janeiro</td>
-                            <td>Bangkokl, Tailândia</td>
-                            <td>08:00 07/09/22</td>
-                            <td>20:00 08/09/22</td>
+                            <td>08:00 12/10/22</td>
+                            <td>20:00 12/10/22</td>
                             <td>4</td>
                             <td>R$10.029,00</td>
                         </tr>
@@ -630,19 +542,10 @@
                     <tbody>
                         <tr>
                             <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
-                            <td>São Paulo(GRU)</td>
-                            <td>Dublin, Irlanda</td>
-                            <td>13:10 07/09/22</td>
-                            <td>23:10 07/09/22</td>
-                            <td>2</td>
-                            <td>R$7.253,00</td>
-                        </tr>
-                        <tr>
-                            <td><img src="../../IMG/LATAM.png" width="120px" height="45px"></td>
                             <td>Rio de Janeiro</td>
                             <td>Dublin, Irlanda</td>
-                            <td>13:10 07/09/22</td>
-                            <td>23:10 07/09/22</td>
+                            <td>13:10 12/10/22</td>
+                            <td>23:10 12/10/22</td>
                             <td>2</td>
                             <td>R$7.253,00</td>
                         </tr>
