Atualização páginas Voos/Pagamento/Hoteis

--- a/PROJETO/subPaginas/Hoteis.html
+++ b/PROJETO/subPaginas/Hoteis.html
@@ -55,22 +55,23 @@
                         <div
                             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary">Machu Picchu, Peru</strong>
-                                <h3 class="mb-0">Sumaq Machu Picchu Hotel</h3>
-                                <p class="card-text mb-auto">A grande maioria das hospedagens para o Santuário Histórico
-                                    fica num vilarejo conhecido como Machu Picchu Pueblo, ou Aguas Calientes. Para quem
-                                    preza pelo máximo conforto, o Sumaq Machu Picchu Hotel é uma das melhores escolhas
-                                    para se hospedar na viagem para as ruínas incas.</p>
+                                <strong class="d-inline-block mb-2 text-primary">Alberta, Canadá</strong>
+                                <h3 class="mb-0">The Ritz-Carlton Hotel</h3>
+                                <p class="card-text mb-auto">O The Ritz-Carlton é uma hospedagem cinco estrelas no
+                                    centro de Toronto, próximo de diversos pontos turísticos. No local, você encontra
+                                    sauna, salão de beleza, centro de spa, espaço kids e lareira ao ar livre. Os quartos
+                                    são equipados com muito luxo e contam com uma bela vista da cidade, além de
+                                    disponibilizarem muito mais.</p>
                             </div>
                             <div class="container">
                                 <div class="text-success">
-                                    <strong>Diárias a partir de R$2.348,00</strong>
+                                    <strong>Diárias a partir de R$932,00</strong>
                                     <a class="float-end btn btn-warning btn btn-outline-light m-1"
                                         href="../subPaginas/PagamentoD01.html" role="button">Finalizar Comprar</a>
                                 </div>
                             </div>
                             <div class="d-lg-block">
-                                <img src="../../IMG/Peru.jpg" width="100%" height="250">
+                                <img src="../../IMG/Canadá.jpg" width="100%" height="250">
                                 </img>
                             </div>
                         </div>
@@ -179,23 +180,22 @@
                         <div
                             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
-                                <strong class="d-inline-block mb-2 text-primary">Alberta, Canadá</strong>
-                                <h3 class="mb-0">The Ritz-Carlton Hotel</h3>
-                                <p class="card-text mb-auto">O The Ritz-Carlton é uma hospedagem cinco estrelas no
-                                    centro de Toronto, próximo de diversos pontos turísticos. No local, você encontra
-                                    sauna, salão de beleza, centro de spa, espaço kids e lareira ao ar livre. Os quartos
-                                    são equipados com muito luxo e contam com uma bela vista da cidade, além de
-                                    disponibilizarem frigobar, televisão com serviço de streaming.</p>
+                                <strong class="d-inline-block mb-2 text-primary">Machu Picchu, Peru</strong>
+                                <h3 class="mb-0">Sumaq Machu Picchu Hotel</h3>
+                                <p class="card-text mb-auto">A grande maioria das hospedagens para o Santuário Histórico
+                                    fica num vilarejo conhecido como Machu Picchu Pueblo, ou Aguas Calientes. Para quem
+                                    preza pelo máximo conforto, o Sumaq Machu Picchu Hotel é uma das melhores escolhas
+                                    para se hospedar na viagem para as ruínas incas, possui frigobar, televisão com serviço de streaming.</p>
                             </div>
                             <div class="container">
                                 <div class="text-success">
-                                    <strong>Diárias a partir de R$932,00</strong>
+                                    <strong>Diárias a partir de R$2.348,00</strong>
                                     <a class="float-end btn btn-warning btn btn-outline-light m-1"
                                         href="../subPaginas/PagamentoD01.html" role="button">Finalizar Comprar</a>
                                 </div>
                             </div>
                             <div class="d-lg-block">
-                                <img src="../../IMG/Canadá.jpg" width="100%" height="250">
+                                <img src="../../IMG/Peru.jpg" width="100%" height="250">
                                 </img>
                             </div>
                         </div>
