--- a/PROJETO/subPaginas/PagamentoD01.html
+++ b/PROJETO/subPaginas/PagamentoD01.html
@@ -147,41 +147,42 @@
                                         Por favor, selecione um país válido.
                                     </div>
                                 </div>
-                                <div class="col-md-4">
-                                    <label for="estado " class="form-label">Estado</label>
-                                    <select class="form-select" id="estado " required>
-                                        <option value="">Escolher...</option>
-                                        <option>Acre</option>
-                                        <option>Alagoas</option>
-                                        <option>Amapá</option>
-                                        <option>Amazonas</option>
-                                        <option>Bahia</option>
-                                        <option>Ceará</option>
-                                        <option>Espírito Santo</option>
-                                        <option>Goiás</option>
-                                        <option>Maranhão</option>
-                                        <option>Mato Grosso</option>
-                                        <option>Mato Grosso do Sul</option>
-                                        <option>Minas Gerais</option>
-                                        <option>Pará</option>
-                                        <option>Paraíba</option>
-                                        <option>Paraná</option>
-                                        <option>Pernambuco</option>
-                                        <option>Piauí</option>
-                                        <option>Rio de Janeiro</option>
-                                        <option>Rio Grande do Norte</option>
-                                        <option>Rio Grande do Sul</option>
-                                        <option>Rondônia</option>
-                                        <option>Roraima</option>
-                                        <option>Santa Catarina</option>
-                                        <option>São Paulo</option>
-                                        <option>Sergipe</option>
-                                        <option>Tocantins</option>
-                                    </select>
-                                    <div class="invalid-feedback">
-                                        Por favor, forneça um estado válido.
-                                    </div>
-                                </div>
+                               <!--Estado-->
+                            <div class="col-md-4">
+                                <label for="estado " class="form-label">Estado</label>
+                                <select class="form-select" aria-label="Default select example">
+                                    <option selected>Escolha um Estado:</option>
+                                    <option value="AC">AC</option>
+                                    <option value="AL">AL</option>
+                                    <option value="AP">AP</option>
+                                    <option value="AM">AM</option>
+                                    <option value="BA">BA</option>
+                                    <option value="CE">CE</option>
+                                    <option value="ES">ES</option>
+                                    <option value="GO">GO</option>
+                                    <option value="MA">MA</option>
+                                    <option value="MT">MT</option>
+                                    <option value="MS">MS</option>
+                                    <option value="MG">MG</option>
+                                    <option value="PA">PA</option>
+                                    <option value="PB">PB</option>
+                                    <option value="PR">PR</option>
+                                    <option value="PE">PE</option>
+                                    <option value="PI">PI</option>
+                                    <option value="RJ">RJ</option>
+                                    <option value="RN">RN</option>
+                                    <option value="RS">RS</option>
+                                    <option value="RO">RO</option>
+                                    <option value="RR">RR</option>
+                                    <option value="SC">SC</option>
+                                    <option value="SP">SP</option>
+                                    <option value="SE">SE</option>
+                                    <option value="TO">TO</option>
+                                </select>
+                            <div class="invalid-feedback">
+                                Por favor, forneça um estado válido.
+                            </div>
+                        </div>
                                 <div class="col-md-3">
                                     <label for="cep" class="form-label">CEP</label>
                                     <input type="text" class="form-control" id="cep" placeholder="00000-000" required>
